--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
             box-sizing: border-box;
             
         }
+
+/*    body*/
         body{
             width: 100%;
             height: 100vh;
